--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <div id="toc">
         </div>
         <div id="content">
-            <h1>Welcome to Mysteries of Inie e e e e e e e e e e ee e e e e e e e e e e e e e e erinth!</h1>
+            <u><h1>Welcome to Mysteries of Inrinth!</h1></u>
             MoI is a new 18+ DnD Discord server aiming to bring a breath of fresh air to the conventional DnD community through some rather unique features. We have everything from fancy embeds to this website you're on right now!<br><br>
             For the sake of making things a bit easier on members, this website has been created to store all the information you could possibly want in regards to character creation. Everything ranging from the server's homebrew to its lore can be found here.
             <br><br>
